# cxx-qt-kirigami

./: Cargo.toml  README.md  build.rs
qml/: qml.qrc
qml/content/: App.qml
src/: cxxqt_q_localized_context.rs  cxxqt_q_template_object.rs  main.rs
