[package]
name = "cxx-qt-kirigami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.94"
cxx-qt = "0.5.1"
cxx-qt-lib = { version = "0.5.1", features = ["qt_qml"] }

[build-dependencies]
cxx-qt-build = "0.5.1"
